Lint inspection fixes